# My-Catatan-Kuliah

./: .gitignore  README.md  Taskfile.yml  devbox.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.devcontainer/: compose.yaml  devcontainer.json  post-create.sh
.github/: CODEOWNERS
.github/workflows/: ci-ai.yml  ci-backend.yml  ci-embedder.yml  ci-frontend.yml  jekyll-gh-pages.yml
ai/: README.md  Taskfile.yml  config.py  llm.py  main.py  pyproject.toml  retriever.py  stream_store.py
ai/app/: __main__.py  config.py  llm.py  main.py  retriever.py  stream_store.py
ai/app/api/: dependencies.py  lifespan.py  router.py  schema.py
ai/app/api/routers/: chat.py  health.py
ai/app/api/services/: chat.py
ai/app/services/: chat.py
ai/app/store/: db.py  redis.py
ai/app/utils/: retriever.py  stream.py  uuid.py
apps/: .gitignore  .spectral.yaml  oaf-config.yaml  openapi.json  openapi.out.json  openapi.yaml  openapi.yaml.bak
apps/backend/: Taskfile.yml  go.mod  go.sum  oapi-codegen.models.yml  oapi-codegen.server.yml  sqlc.yaml
apps/backend/cmd/: main.go
apps/backend/internal/app/: app.go  config.go  db.go  event.go  handler.go  logger.go  s3.go
apps/backend/internal/cmd/: migrate.go  root.go  serve.go
apps/backend/internal/event/: embedder.go  init.go
apps/backend/utils/pagination/: pagination.go
apps/backend/utils/uuidx/: base58.go  base58http.go
apps/frontend/: .oxfmtrc.json  .oxlintrc.json  Taskfile.yml  eslint.config.ts  orval.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.js
apps/frontend/src/: Tiptap.tsx  main.tsx  posts.tsx  routeTree.gen.ts  styles.css
apps/frontend/src/components/: study-hub.tsx
apps/frontend/src/hooks/: use-composed-ref.ts  (+5 more)
apps/migration/: 00001_create_user.sql  00001_create_users.sql  00002_create_workspaces.sql  00003_create_courses.sql  00003_create_pages.sql  00004_create_course_notes.sql  00004_create_pages_content.sql  00004_pages_function.sql  00005_assignments.sql  00005_pages_function.sql  00006_create_search_vector.sql  00006_enable_pgvector.sql  00007_create_hybrid_search.sql  00007_create_hybrid_search_rpc.sql  00008_create_chats.sql  00008_create_files.sql  00008_create_note_change_trigger.sql  00009_add_public_id.sql  00009_create_chats.sql
docs/: _config.yaml  index.md  modul1.md  modul2.md
embedder/: README.md  Taskfile.yml  chunker.py  config.py  db.py  embedding.py  main.py  pyproject.toml
embedder/app/: __main__.py  config.py  db.py  embedder.py  processor.py  worker.py
hocuspocus/: README.md  Taskfile.yml  package.json  pnpm-lock.yaml
hocuspocus/src/: config.ts  index.ts  store.ts
hocuspocus/src/services/: nats.ts  postgres.ts
hocuspocus/src/store/: sqlite.ts
proto/: Taskfile.yml  buf.gen.yaml
scripts/: pyproject.toml  sort-openapi.py
(+206 files in other folders)
