[project]
name = "embedder"
version = "0.1.0"
description = "Listens for Postgres NOTIFY events on course_notes, chunks and embeds content for RAG pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sentence-transformers>=3.4.0",
    "asyncpg>=0.30.0",
    "langchain-text-splitters>=0.3.0",
    "proto",
    "python-dotenv>=1.2.2",
    "nats-py>=2.14.0",
    "pgvector>=0.4.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff==0.15.6",
]

[tool.uv.sources]
proto = { workspace = true }

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # ignore all pydocstyle
    "D",

    # ignore all TODO
    "TD",

    "PLR0911", # allow many return
    "PLR0913", # allow many argument

    # conflict with formatter https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "E501",
]

[tool.taskipy.tasks]
check = "ruff check && pyright"
format = "ruff format"
lint = "ruff check && pyright"
